Started Security Chapter.

--- a/src/main/resources/templates/resultPage.html
+++ b/src/main/resources/templates/resultPage.html
@@ -12,7 +12,7 @@
 		<ul class="collection">
 			<li class="collection-item avatar" th:each="tweet : ${tweets}">
 				<img th:src="${tweet.profileImageUrl}" alt="" class="circle"/>
-				<span class="title" th:text="${tweet.name}">Username</span>
+				<span class="title" th:text="${tweet.user}">Username</span>
 
 				<p th:text="${tweet.text}">Tweet message</p>
 			</li>
