--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -6,11 +6,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
 	<title>Default title</title>
-
 	<link href="/webjars/materializecss/0.97.0/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
-
 	<ul id="lang-dropdown" class="dropdown-content">
 		<li><a href="?lang=en_US">English</a></li>
 		<li><a href="?lang=fr">French</a></li>
@@ -18,11 +16,11 @@
 	<nav>
 		<div class="nav-wrapper indigo">
 			<ul class="right">
-				<li><a class="dropdown-button" href="#!" data-activates="lang-dropdown"><i class="mdi-action-language right"></i> Lang</a></li>
+				<li><a class="dropdown-button" href="#!" data-activates="lang-dropdown"><i class="mdi-action-language right"></i>Lang</a></li>
 			</ul>
 		</div>
 	</nav>
-	<div>
+	<div sec:authorize="isAuthenticated()">
 		You are logged as <b sec:authentication="name"/> with roles <span sec:authentication="authorities"/>
 		-
 		<form th:action="@{/logout}" method="post" style="display: inline-block">
